# tiler

./: .coveragerc  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  pypi-publish.yml  test.yml
docs/: index.html
examples/: 2d_overlap_tile.py  3d_overlap_tile.py  batch_processing.py  tiler_example.py
misc/: docs.sh
misc/teaser/: teaser_image.py
src/tiler/: __init__.py  _windows.py  merger.py  tiler.py
tests/: test_merger.py  test_tiler.py  test_windows.py
tiler/: __init__.py  _windows.py  merger.py  tiler.py  utils.py  windows.py
