[metadata]
name = tiler
version = attr: tiler.__version__
description = N-dimensional NumPy array tiling and merging with overlapping, padding and tapering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/the-lay/tiler
author = the-lay
author_email = ilja.gubin@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://the-lay.github.io/tiler/
    Source = https://github.com/the-lay/tiler
    Issues = https://github.com/the-lay/tiler/issues

[options]
packages =
    tiler
platforms = any
python_requires = >= 3.6
install_requires =
    numpy
    tqdm

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
docs =
    pdoc==8.0.1
all =
    %(docs)s
    %(test)s
